# filo2

./: .clang-format  .gitignore  CMakeLists.txt  Parameters.hpp  Renderer.hpp  main.cpp  readme.md
base/: BinaryHeap.hpp  BitMatrix.hpp  FixedSizeValueStack.hpp  Flat2DVector.hpp  KDTree.cpp  KDTree.hpp  LRUCache.hpp  NonCopyable.hpp  PrettyPrinter.hpp  SmallFlatMap.hpp  SmallFlatSet.hpp  SparseIntSet.hpp  Timer.hpp  VectorView.hpp  VertexSet.hpp  Welford.hpp  functor.hpp  macro.hpp
instance/: Instance.cpp  Instance.hpp  Parser.cpp  Parser.hpp
instances/B/: Antwerp1.txt  Antwerp2.txt  Brussels1.txt  Brussels2.txt  Flanders1.txt  Flanders2.txt  Ghent1.txt  Ghent2.txt  Leuven1.txt  Leuven2.txt
instances/I/: Molise.vrp  Trentino-Alto-Adige.vrp  Valle-D-Aosta.vrp
localsearch/: AbstractOperator.hpp  EjectionChain.hpp  LocalSearch.hpp  OneOneExchange.hpp  OneZeroExchange.hpp  RevThreeOneExchange.hpp  RevThreeThreeExchange.hpp  RevThreeTwoExchange.hpp  RevThreeZeroExchange.hpp  RevTwoOneExchange.hpp  RevTwoTwoExchange.hpp  RevTwoZeroExchange.hpp  SplitExchange.hpp  TailsExchange.hpp  ThreeOneExchange.hpp  ThreeThreeExchange.hpp  ThreeTwoExchange.hpp  ThreeZeroExchange.hpp  TwoOneExchange.hpp  TwoOptExchange.hpp  TwoTwoExchange.hpp  TwoZeroExchange.hpp
movegen/: MoveGenerators.hpp
opt/: RuinAndRecreate.hpp  SimulatedAnnealing.hpp  bpp.hpp  routemin.hpp
results/: readme.md
results/csvs/: filo-b-long.csv  filo-b.csv  filo-x-long.csv  filo-x.csv  filo2-b-long.csv  filo2-b.csv  filo2-i-long.csv  filo2-i.csv  filo2-x-long.csv  filo2-x.csv
results/filo/b-long/: Antwerp1.txt_seed-0.out  Antwerp1.txt_seed-0.vrp.sol  Antwerp1.txt_seed-1.out  Antwerp1.txt_seed-1.vrp.sol  Antwerp1.txt_seed-2.out  Antwerp1.txt_seed-2.vrp.sol  Antwerp1.txt_seed-3.out  Antwerp1.txt_seed-3.vrp.sol  Antwerp1.txt_seed-4.out  Antwerp1.txt_seed-4.vrp.sol  Antwerp1.txt_seed-5.out  Antwerp1.txt_seed-5.vrp.sol  Antwerp1.txt_seed-6.out  Antwerp1.txt_seed-6.vrp.sol  Antwerp1.txt_seed-7.out  Antwerp1.txt_seed-7.vrp.sol  Antwerp1.txt_seed-8.out  Antwerp1.txt_seed-8.vrp.sol  Antwerp1.txt_seed-9.out  Antwerp1.txt_seed-9.vrp.sol  Antwerp2.txt_seed-0.out  Antwerp2.txt_seed-0.vrp.sol  Antwerp2.txt_seed-1.out  Antwerp2.txt_seed-1.vrp.sol  Antwerp2.txt_seed-2.out  Antwerp2.txt_seed-2.vrp.sol  Antwerp2.txt_seed-3.out  Antwerp2.txt_seed-3.vrp.sol  Antwerp2.txt_seed-4.out  Antwerp2.txt_seed-4.vrp.sol  Antwerp2.txt_seed-5.out  Antwerp2.txt_seed-5.vrp.sol  Antwerp2.txt_seed-6.out  Antwerp2.txt_seed-6.vrp.sol  (+166 more)
results/i-bks/: Abruzzo.sol  Basilicata.sol  Calabria.sol  Campania.sol  Friuli-Venezia-Giulia.sol  Liguria.sol  Marche.sol  Molise.sol  Sardegna.sol  Trentino-Alto-Adige.sol  Umbria.sol  Valle-D-Aosta.sol
solution/: Solution.cpp  Solution.hpp  savings.hpp
(+9033 files in other folders)
